# AI-IDS-pipeline

./: .gitignore  ADVANCED_THREAT_INTELLIGENCE.md  BATCH_2_SUMMARY.md  BATCH_3_SUMMARY.md  CODEBASE_STATUS_VISUAL.md  CPP_VALIDATION_AUTHENTICATION_REPORT.md  EBPF_COMPLETION_STATUS.md  EBPF_IMPLEMENTATION_GUIDE.md  EBPF_IMPLEMENTATION_SUMMARY.md  EBPF_QUICK_START.md  EXECUTIVE_SUMMARY.md  FINAL_VALIDATION_RESULTS.md  PRODUCTION_DEPLOYMENT_ARCHITECTURE.md  PROJECT_COMPLETE.md  README.md  REAL_METRICS_VALIDATION_REPORT.md  REAL_VALIDATION_METRICS_FINAL.md  REPO_DESCRIPTION.md  REPO_PUSH_SUMMARY.md  SYSTEM_ARCHITECTURE_DIAGRAM.md  SYSTEM_STATUS.md  UNDERSTANDING_THE_CODEBASE.md  VALIDATION_SYSTEM_AUTHENTICATION.md  VALIDATION_SYSTEM_COMPLETE_AUTHENTICATION.md  VALIDATION_SYSTEM_COMPLETE_SUMMARY.md  VALIDATOR_AUTO_CORRECTION_FIX.md  VALIDATOR_DATABASE_PERSISTENCE_PROOF.md  VALIDATOR_FALSE_NEGATIVE_PREVENTION_FINAL_PROOF.md  WHATS_LEFT_TODO.md  clean_separator_comments.py
Stage_1_Foundation_CNN/: README.md
Stage_2_Pattern_Recognition_RNN/: README.md
Stage_3_Decision_Engine/: README.md
Stage_4_Database_Memory/: README.md
Stage_5_Attacker_Evolution/: README.md
Stage_6_Validation_Learning/: README.md
Stage_7_CPP_Backend/: README.md
Stage_8_Integration_Training/: README.md
ai-architecture/: ASYNC_OPTIMIZATION.md  README.md  TRAINING_GUIDE.bat  async_pipeline.py  coevo_test_report.json  coevolution_data_exchange.py  cpp_bridge.py  csv_threat_loader.py  event_bus.py  firewall_actions.jsonl  init_fresh_database.py  multi_dataset_loader.py  realtime_data_validator.py  requirements.txt  run.py  run_async.py  start_extended_training.bat  start_production_training.bat  start_production_training.sh  start_training_with_validation.bat  test_5min.bat  test_coevo_5min.py  threat_authentication_system.py  train.bat  universal_agent.py
ai-architecture/attacker/: README.md  __init__.py  attack_engine.py  attack_profiles.py  mutator.py  packet_sender.py  remote_sender.py  run_attacker.py  session_report.json  target_scanner.py
ai-architecture/cnn/: cnn_engine.py
ai-architecture/cpp/: CMakeLists.txt  build.py  build_ebpf.sh  ebpf_daemon.cpp  ebpf_integration.cpp  ebpf_integration.hpp  ebpf_kernel.c  ebpf_loader.cpp  ids_auth.cpp  ids_ebpf.bpf.c  ids_ebpf.cpp  ids_mutation_predictor.cpp  ids_pipeline.cpp
ai-architecture/database/: dataset_statistics.json  db_engine.py  ids_signatures.jsonl  synthetic_from_datasets.jsonl
ai-architecture/decoder/: decoder_engine.py  mutation_predictor.py
ai-architecture/network/: decision_feedback_server.py  firewall_enforcer.py  (+5 more)
graphify/: GRAPH_CONTEXT.md  README.md  generate_codebase_graph.py
include/: ids.hpp  ids_adaptive.hpp  ids_auth.hpp  ids_capture.hpp  ids_correlation.hpp  ids_decision.hpp  ids_decision_enhanced.hpp  ids_ebpf.hpp  ids_level0.hpp  ids_level1.hpp  ids_memory.hpp  ids_model.hpp  ids_mutation_predictor.hpp  ids_reasoning.hpp  ids_sharded.hpp  ids_ssm.hpp  ids_telemetry.hpp  ids_types.hpp
(+41 files in other folders)
